deployments/k8s/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: uber-clone
  labels:
    app: uber-clone
