deployments/k8s/dev/web-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-service
  namespace: uber-clone
  labels:
    component: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-service
  template:
    metadata:
      labels:
        app: web-service
    spec:
      containers:
      - name: web-service
        image: uber-clone/web-service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
          name: http
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 256Mi
